PoC: Attachments by relative URL
- Changed route for issue. Always with one posfix:
   - /issue/ABC-2/root (instead of /issue/ABC-2)
   - /issue/ABC-2/comment-12345 (instead of /issue/ABC-2/comment/12345)
   - etc.
- Preparation for moving .mizoine to separate path