@@ -3,12 +3,13 @@ package com.gratchev.mizoine;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.util.Arrays;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import com.gratchev.mizoine.FlexmarkImgThumbnailExtension.LinkTemplate;
+import com.gratchev.mizoine.FlexmarkExtension.LinkTemplate;
 import com.vladsch.flexmark.ext.autolink.AutolinkExtension;
 import com.vladsch.flexmark.html.HtmlRenderer;
 import com.vladsch.flexmark.parser.Parser;
@@ -17,28 +18,24 @@ import com.vladsch.flexmark.util.data.MutableDataHolder;
 import com.vladsch.flexmark.util.data.MutableDataSet;
 import com.vladsch.flexmark.util.misc.Extension;
 
-public class FlexmarkImgThumbnailExtensionTest {
-	protected static final Logger LOGGER = LoggerFactory.getLogger(FlexmarkImgThumbnailExtensionTest.class);
+public class FlexmarkExtensionTest {
+	protected static final Logger LOGGER = LoggerFactory.getLogger(FlexmarkExtensionTest.class);
 	static String commonMark(String markdown) {
-		
-
-//		FlexmarkImgThumbnailExtension.LINK_TEMPLATES.add(new LinkTemplate("note:", "http://test.com/notes/{1}/sub/{0}", null, true));
-//		FlexmarkImgThumbnailExtension.LINK_TEMPLATES.add(new LinkTemplate("note", "http://test.com/notes/{0}", null, true));
 		
 		MutableDataHolder options = new MutableDataSet();
 		options.set(Parser.EXTENSIONS, Arrays.asList(new Extension[] { 
 				AutolinkExtension.create(), 
-				FlexmarkImgThumbnailExtension.create(),
+				FlexmarkExtension.create(),
 				}));
 
 		// change soft break to hard break
 		options.set(HtmlRenderer.SOFT_BREAK, "<br/>");
 		
-		options.set(FlexmarkImgThumbnailExtension.TEMPLATES, Arrays.asList(new LinkTemplate[] { 
+		options.set(FlexmarkExtension.TEMPLATES, List.of(
 				new LinkTemplate("issue", "/issue/{0}", "text-primary", false),
 				new LinkTemplate("note-", "http://test.com/notes/{1}/sub/{0}", null, true), 
-				new LinkTemplate("note", "http://test.com/notes/{0}", null, true),
-				}));
+				new LinkTemplate("note", "http://test.com/notes/{0}", null, true)
+				));
 
 		Parser parser = Parser.builder(options).build();
 		Node document = parser.parse(markdown);
@@ -57,10 +54,21 @@ public class FlexmarkImgThumbnailExtensionTest {
 
 	@Test
 	public void testImgRef() {
+		final String html = commonMark("hello ![ABC123.lg] image\n\n[ABC123.lg]: /attachments/image1.jpg");
+		assertEquals("<p>hello <img src=\"/attachments/image1.jpg\" alt=\"ABC123.lg\" class=\"miz-md-img\" miz-ref=\"ABC123.lg\" /> image</p>\n", html);
+	}
+
+	@Test
+	public void testImgRefWithText() {
 		final String html = commonMark("hello ![Test][ABC123.lg] image\n\n[ABC123.lg]: /attachments/image1.jpg");
 		assertEquals("<p>hello <img src=\"/attachments/image1.jpg\" alt=\"Test\" class=\"miz-md-img\" miz-ref=\"ABC123.lg\" /> image</p>\n", html);
-		
 	}
+
+//	@Test
+//	public void testImgAuto() {
+//		final String html = commonMark("hello ![ABC123](thumb) image");
+//		assertEquals("<p>hello <img src=\"/attachments/image1.jpg\" alt=\"ABC123\" class=\"miz-md-img\" miz-ref=\"ABC123\" /> image</p>\n", html);
+//	}
 
 	@Test
 	public void testImgRefThumbnail() {
